The most basic rudiments of a site nav added. Fiddled with the page width some because the sticky linkboxes on the side would prevent you from scrolling if they were too long, and it seems they were running outside the content area before

--- a/www/styles/chimera.css
+++ b/www/styles/chimera.css
@@ -21,10 +21,38 @@ a:hover {
     color: rgb(120, 210, 165)
 }
 
+nav {
+    height: 130px;
+    background-color: rgb(30, 30, 30);
+    border-bottom: 5px solid black;
+    margin: -10px -10px 16px -10px;
+}
+
+nav div {
+    display: flex;
+    height: 140px;
+    margin-left: 2em;
+    align-items: center;
+}
+
+/*
+.flex-container {
+    display: flex;
+}
+
+span.title {
+    text-align: left;
+}
+
+span.menu {
+    text-align: right;
+}
+*/
+
 img {
-    height: auto; 
-    width: auto; 
-    max-width: 100%; 
+    height: auto;
+    width: auto;
+    max-width: 100%;
     max-height: 100%;
 }
 
@@ -44,7 +72,7 @@ pre code {
 blockquote {
     margin: 0;
 }
-  
+
 blockquote p {
     padding: 10px;
     background: rgb(44,44,44);
@@ -86,15 +114,12 @@ tr:nth-child(odd) {
     padding: 1em;
 }
 
-.sticky {
-    position: fixed;
-}
-
 .linkbox {
     border-radius: 5px;
     border-left: 5px solid black;
     background-color: rgb(44,44,44);
     padding: 1em;
+    width: 100%;
 }
 
 .linkbox p {
